--- a/src/fr/upem/captcha/view/index.fxml
+++ b/src/fr/upem/captcha/view/index.fxml
@@ -3,23 +3,24 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.upem.captcha.controller.IndexController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #FFE7E7;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.upem.captcha.controller.IndexController">
    <center>
-      <GridPane fx:id="gridPane" gridLinesVisible="true" prefHeight="252.0" prefWidth="600.0" BorderPane.alignment="CENTER">
+      <GridPane fx:id="gridPane" blendMode="SRC_ATOP" gridLinesVisible="true" prefHeight="182.0" prefWidth="484.0" style="-fx-background-color: #ffffff;" BorderPane.alignment="CENTER">
         <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         </columnConstraints>
         <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
         </rowConstraints>
          <BorderPane.margin>
             <Insets />
@@ -27,16 +28,22 @@
       </GridPane>
    </center>
    <bottom>
-      <BorderPane prefHeight="60.0" prefWidth="600.0" BorderPane.alignment="CENTER">
+      <BorderPane prefHeight="78.0" prefWidth="600.0" BorderPane.alignment="CENTER">
          <center>
-          <Button fx:id="valider" mnemonicParsing="false" onAction="#handleValidate" text="Valider" BorderPane.alignment="CENTER" />
+          <Button fx:id="valider" mnemonicParsing="false" onAction="#handleValidate" prefHeight="45.0" prefWidth="112.0" style="-fx-background-color: #403A3A; -fx-border-color: #ffffff; -fx-text-fill: #FFE7E7; -fx-border-width: 0; -fx-background-radius: 20; -fx-font-family: &quot;Courier New&quot;;" text="Valider" BorderPane.alignment="CENTER" />
          </center>
       </BorderPane>
    </bottom>
    <top>
-      <Label fx:id="label" scaleX="2.0" scaleY="2.0" text="Label" BorderPane.alignment="CENTER" />
+      <Label fx:id="label" alignment="CENTER" contentDisplay="CENTER" prefHeight="80.0" prefWidth="282.0" scaleX="2.0" scaleY="2.0" style="-fx-text-alignment: center; -fx-font-size: 10; -fx-text-fill: #403A3A;" text="Trouver : " textAlignment="RIGHT" BorderPane.alignment="CENTER" />
    </top>
    <padding>
       <Insets top="15.0" />
    </padding>
+   <left>
+      <SplitPane prefHeight="269.0" prefWidth="54.0" style="-fx-background-color: #FFE7E7;" BorderPane.alignment="CENTER" />
+   </left>
+   <right>
+      <SplitPane prefHeight="269.0" prefWidth="62.0" style="-fx-background-color: #FFE7E7;" BorderPane.alignment="CENTER" />
+   </right>
 </BorderPane>
